UI: Fix statusbar position indicators causing UI to jump - fixes #1536
rn=

(integrated from master branch change 9.2.1-1637-g83e26b4 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -350,6 +350,11 @@ statusbar
     {
         opacity: 0.6;
     }
+    
+    statusbarpanel[anonid="statusbar-pos-info"]
+    {
+        min-width: 200px;
+    }
 }
 
 &[classic-statusbar="true"]
